--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mocha": "mocha",
     "preversion": "npm test",
     "version": "git add package.json package-lock.json",
-    "postversion": "git push && git push --tags && npm publish"
+    "postversion": "git push && git push --tags && npm publish",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
